updated notebook to format output

--- a/Project.ipynb
+++ b/Project.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 60,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -93,14 +93,14 @@
     "    return(rmse)\n",
     "\n",
     "def outputPredictionToCSV(predictionData, filename):\n",
-    "    arr = test.loc[:,'quarterFlight.year']\n",
-    "    arr2 = test.loc[:,'quarterFlight.quarter']\n",
+    "    arr = test.loc[:,'year']\n",
+    "    arr2 = test.loc[:,'quarter']\n",
     "    arr3 = np.expm1(predictionData)\n",
     "   \n",
-    "    df = pd.DataFrame(data=arr, columns = ['quarterFlight.year'])\n",
+    "    df = pd.DataFrame(data=arr, columns = ['year'])\n",
     "    df.applymap(int)\n",
     "    \n",
-    "    df1 = pd.DataFrame(data=arr2, columns = ['quarterFlight.quarter'])\n",
+    "    df1 = pd.DataFrame(data=arr2, columns = ['quarter'])\n",
     "    df1.applymap(int)\n",
     "    \n",
     "    df2 = pd.DataFrame(data=arr3, columns = ['predict.rev'])\n",
@@ -116,11 +116,12 @@
     "\n",
     "def printActuals(predictionData):\n",
     "    act_data = pd.read_csv(\"QueryResult_Rev.csv\")\n",
+    "#     print(act_data)\n",
     "    arr3 = np.expm1(predictionData)\n",
     "    percentErrors =[]\n",
     "    for x in range(len(act_data.rev)):\n",
     "        percentError= (100*(abs(act_data.rev[x]-arr3[x])/act_data.rev[x]))\n",
-    "        print(str(act_data.rev[x])+\", \"+str(arr3[x])+\", \"+ str(percentError)+\"%\")\n",
+    "        print(\"Quarter : \"+str(act_data.quarter[x])+\" Year: \"+str(act_data.year[x])+\" : Actual: \"+str(act_data.rev[x])+\" ,Prediction: \"+str(arr3[x])+\" ,Error: \"+ str(percentError)+\"%\")\n",
     "        percentErrors.append(percentError)\n",
     "    print(\"Avg Percent Error is : \"+str(sum(percentErrors) / len(percentErrors) ))\n",
     "        "
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -140,8 +141,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ridge_regression_withGivenAlpha has RMSE of 0.05280454314537678\n",
-      "ridge_regression_withGivenAlpha has MSE on train data is: 0.00011834839206926356\n"
+      "ridge_regression_withGivenAlpha has RMSE of 0.0528045431453785\n",
+      "ridge_regression_withGivenAlpha has MSE on train data is: 0.00011834839206927143\n"
      ]
     }
    ],
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 62,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -169,7 +170,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The best ridge regression : 0.034079704826530124 with Alpha as 5.0\n",
+      "The best ridge regression : 0.0340797048265295 with Alpha as 5.0\n",
       "The top five are:\n",
       "5.0    0.034080\n",
       "7.0    0.034094\n",
@@ -179,13 +180,13 @@
       "dtype: float64\n",
       "\n",
       "\n",
-      "The best lasso regression : 0.03181106515548849 with Alpha as 0.0005\n",
+      "The best lasso regression : 0.03184616720321791 with Alpha as 0.0005\n",
       "The top five are:\n",
-      "0.0005    0.031811\n",
-      "0.0050    0.032404\n",
-      "0.0500    0.034089\n",
-      "0.1000    0.035928\n",
-      "0.3000    0.043163\n",
+      "0.0005    0.031846\n",
+      "0.0050    0.032383\n",
+      "0.0500    0.034090\n",
+      "0.1000    0.035930\n",
+      "0.0001    0.040202\n",
       "dtype: float64\n"
      ]
     }
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 63,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -227,8 +228,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ridge_regression_withBestAlpha has RMSE of 0.034079704826530124\n",
-      "ridge_regression_withBestAlpha has MSE on train data is: 0.00013014101763360116\n"
+      "ridge_regression_withBestAlpha has RMSE of 0.0340797048265295\n",
+      "ridge_regression_withBestAlpha has MSE on train data is: 0.00013014101763361284\n"
      ]
     }
    ],
@@ -244,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 64,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -256,8 +257,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lasso_regression_withBestAlpha has RMSE of 0.03181106515548849\n",
-      "lasso_regression_withBestAlpha has MSE on train data is: 0.0001273116383557397\n"
+      "lasso_regression_withBestAlpha has RMSE of 0.03184616720321791\n",
+      "lasso_regression_withBestAlpha has MSE on train data is: 0.00012940690560303978\n"
      ]
     }
    ],
@@ -275,28 +276,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5909, 5812.028048710942, 1.641089038569265%\n",
-      "5149, 4015.032951462546, 22.02305396266176%\n",
-      "5704, 3936.220076206019, 30.99193414786082%\n",
-      "5575, 3955.963452401965, 29.041014306691217%\n",
-      "5742, 4137.463394116115, 27.943862868057913%\n",
-      "4944, 4349.357618438584, 12.027556261355505%\n",
-      "5258, 4341.655009903757, 17.427633893043804%\n",
-      "5303, 4057.305115116, 23.490380631416183%\n",
-      "5731, 4058.246798333135, 29.18780669458847%\n",
-      "4854, 4122.840107426909, 15.063038577937608%\n",
-      "4940, 4057.6837986069827, 17.86065185006108%\n",
-      "5139, 4066.563573559025, 20.868581950593015%\n",
-      "5384, 4067.89516075906, 24.444740699125926%\n",
-      "4826, 3833.835718478963, 20.55872941402895%\n",
-      "Avg Percent Error is : 20.897862449713678\n"
+      "Quarter : 2 Year: 2019 : Actual: 5909 ,Prediction: 5812.028048710654 ,Error: 1.6410890385741443%\n",
+      "Quarter : 1 Year: 2019 : Actual: 5149 ,Prediction: 4015.0329514624605 ,Error: 22.023053962663422%\n",
+      "Quarter : 4 Year: 2018 : Actual: 5704 ,Prediction: 3936.220076205935 ,Error: 30.99193414786229%\n",
+      "Quarter : 3 Year: 2018 : Actual: 5575 ,Prediction: 3955.9634524019084 ,Error: 29.041014306692226%\n",
+      "Quarter : 2 Year: 2018 : Actual: 5742 ,Prediction: 4137.463394116026 ,Error: 27.943862868059448%\n",
+      "Quarter : 1 Year: 2018 : Actual: 4944 ,Prediction: 4349.357618438553 ,Error: 12.027556261356132%\n",
+      "Quarter : 4 Year: 2017 : Actual: 5258 ,Prediction: 4341.655009903634 ,Error: 17.427633893046142%\n",
+      "Quarter : 3 Year: 2017 : Actual: 5303 ,Prediction: 4057.3051151158843 ,Error: 23.49038063141836%\n",
+      "Quarter : 2 Year: 2017 : Actual: 5731 ,Prediction: 4058.2467983330484 ,Error: 29.187806694589973%\n",
+      "Quarter : 1 Year: 2017 : Actual: 4854 ,Prediction: 4122.840107426938 ,Error: 15.063038577937007%\n",
+      "Quarter : 4 Year: 2016 : Actual: 4940 ,Prediction: 4057.683798606925 ,Error: 17.860651850062247%\n",
+      "Quarter : 3 Year: 2016 : Actual: 5139 ,Prediction: 4066.563573559025 ,Error: 20.868581950593015%\n",
+      "Quarter : 2 Year: 2016 : Actual: 5384 ,Prediction: 4067.8951607590316 ,Error: 24.44474069912646%\n",
+      "Quarter : 1 Year: 2016 : Actual: 4826 ,Prediction: 3833.835718479072 ,Error: 20.55872941402669%\n",
+      "Avg Percent Error is : 20.897862449714825\n"
      ]
     }
    ],
@@ -306,28 +307,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5909, 4930.040790173707, 16.567256893320238%\n",
-      "5149, 3863.957787294854, 24.95712201796749%\n",
-      "5704, 3785.683383678402, 33.63107672373068%\n",
-      "5575, 3800.613512255404, 31.82756031828871%\n",
-      "5742, 3917.185655767601, 31.780117454413077%\n",
-      "4944, 4112.823446308621, 16.811823496993913%\n",
-      "5258, 4038.6338278719895, 23.190684140890273%\n",
-      "5303, 3906.531062808953, 26.33356472168673%\n",
-      "5731, 3924.143771391646, 31.527765287181186%\n",
-      "4854, 4054.463354481601, 16.47170674739182%\n",
-      "4940, 3975.5004994132855, 19.52428138839503%\n",
-      "5139, 3987.291527127937, 22.411139771785617%\n",
-      "5384, 3982.5935481447204, 26.02909457383506%\n",
-      "4826, 4033.8414921175827, 16.414390963166543%\n",
-      "Avg Percent Error is : 24.105541749931884\n"
+      "Quarter : 2 Year: 2019 : Actual: 5909 ,Prediction: 4930.040790173856 ,Error: 16.567256893317715%\n",
+      "Quarter : 1 Year: 2019 : Actual: 5149 ,Prediction: 3863.9577872948125 ,Error: 24.957122017968295%\n",
+      "Quarter : 4 Year: 2018 : Actual: 5704 ,Prediction: 3785.6833836783617 ,Error: 33.63107672373138%\n",
+      "Quarter : 3 Year: 2018 : Actual: 5575 ,Prediction: 3800.61351225537 ,Error: 31.82756031828933%\n",
+      "Quarter : 2 Year: 2018 : Actual: 5742 ,Prediction: 3917.185655767601 ,Error: 31.780117454413077%\n",
+      "Quarter : 1 Year: 2018 : Actual: 4944 ,Prediction: 4112.823446308621 ,Error: 16.811823496993913%\n",
+      "Quarter : 4 Year: 2017 : Actual: 5258 ,Prediction: 4038.6338278719895 ,Error: 23.190684140890273%\n",
+      "Quarter : 3 Year: 2017 : Actual: 5303 ,Prediction: 3906.531062808932 ,Error: 26.333564721687125%\n",
+      "Quarter : 2 Year: 2017 : Actual: 5731 ,Prediction: 3924.1437713916253 ,Error: 31.527765287181552%\n",
+      "Quarter : 1 Year: 2017 : Actual: 4854 ,Prediction: 4054.4633544815865 ,Error: 16.47170674739212%\n",
+      "Quarter : 4 Year: 2016 : Actual: 4940 ,Prediction: 3975.5004994132782 ,Error: 19.524281388395178%\n",
+      "Quarter : 3 Year: 2016 : Actual: 5139 ,Prediction: 3987.291527127937 ,Error: 22.411139771785617%\n",
+      "Quarter : 2 Year: 2016 : Actual: 5384 ,Prediction: 3982.5935481447277 ,Error: 26.02909457383492%\n",
+      "Quarter : 1 Year: 2016 : Actual: 4826 ,Prediction: 4033.8414921175613 ,Error: 16.414390963166987%\n",
+      "Avg Percent Error is : 24.105541749931966\n"
      ]
     }
    ],
@@ -337,34 +338,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5909, 5273.9160104395305, 10.747740557801142%\n",
-      "5149, 3868.1246189350722, 24.876196952125223%\n",
-      "5704, 3791.8244320831072, 33.52341458479826%\n",
-      "5575, 3809.3417110140003, 31.671000699300443%\n",
-      "5742, 3967.336384846467, 30.906715694070584%\n",
-      "4944, 4164.511957332092, 15.766343905095232%\n",
-      "5258, 4125.427931034031, 21.539978489272904%\n",
-      "5303, 3927.633057615744, 25.935639117183783%\n",
-      "5731, 3947.6978657129475, 31.116770795446737%\n",
-      "4854, 4039.5069644972696, 16.77983179857294%\n",
-      "4940, 3975.4445703296324, 19.525413556080316%\n",
-      "5139, 3989.20189044652, 22.373965937993386%\n",
-      "5384, 3998.488321987451, 25.73387217705329%\n",
-      "4826, 3879.503162441335, 19.61245001157615%\n",
-      "Avg Percent Error is : 23.57923816259788\n"
+      "Quarter : 2 Year: 2019 : Actual: 5909 ,Prediction: 5088.8390978021735 ,Error: 13.879859573495118%\n",
+      "Quarter : 1 Year: 2019 : Actual: 5149 ,Prediction: 3855.148429945086 ,Error: 25.128210721594762%\n",
+      "Quarter : 4 Year: 2018 : Actual: 5704 ,Prediction: 3776.7752963513663 ,Error: 33.78724936270396%\n",
+      "Quarter : 3 Year: 2018 : Actual: 5575 ,Prediction: 3794.040600066218 ,Error: 31.945460088498333%\n",
+      "Quarter : 2 Year: 2018 : Actual: 5742 ,Prediction: 3935.690070370278 ,Error: 31.457853180594253%\n",
+      "Quarter : 1 Year: 2018 : Actual: 4944 ,Prediction: 4133.62638822968 ,Error: 16.391052018008093%\n",
+      "Quarter : 4 Year: 2017 : Actual: 5258 ,Prediction: 4074.914626269377 ,Error: 22.50067276018682%\n",
+      "Quarter : 3 Year: 2017 : Actual: 5303 ,Prediction: 3910.226223818641 ,Error: 26.263884144472172%\n",
+      "Quarter : 2 Year: 2017 : Actual: 5731 ,Prediction: 3931.1973947258007 ,Error: 31.40468688316523%\n",
+      "Quarter : 1 Year: 2017 : Actual: 4854 ,Prediction: 4042.3469234071863 ,Error: 16.721324198451047%\n",
+      "Quarter : 4 Year: 2016 : Actual: 4940 ,Prediction: 3971.086771399451 ,Error: 19.61362810932285%\n",
+      "Quarter : 3 Year: 2016 : Actual: 5139 ,Prediction: 3985.0547792296707 ,Error: 22.454664735752665%\n",
+      "Quarter : 2 Year: 2016 : Actual: 5384 ,Prediction: 3988.4928495937424 ,Error: 25.919523595955752%\n",
+      "Quarter : 1 Year: 2016 : Actual: 4826 ,Prediction: 3958.0795784601446 ,Error: 17.984260703270937%\n",
+      "Avg Percent Error is : 23.96088071967657\n"
      ]
     }
    ],
    "source": [
     "printActuals(predictforModel2b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
