--- a/Format Scripts/convertRevData.ipynb
+++ b/Format Scripts/convertRevData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -11,12 +11,12 @@
    },
    "outputs": [],
    "source": [
-    "inputFile = open(\"quarter.txt\", \"r\")\n",
+    "inputFile = open(\"data/raw_quarterRevForWN.txt\", \"r\")\n",
     "outputFile = open(\"quarterData.csv\", \"w\")\n",
     "#Q3 2019 $5,639\n",
     "outputFile.write(\"quarter,year,rev\\n\")\n",
     "for x in inputFile:\n",
-    "    quarter= x.split(\" \")[0]\n",
+    "    quarter= x.split(\" \")[0].replace('Q','')\n",
     "    year = x.split(\" \")[1].split('\\t')[0]\n",
     "    rev = x.split(\" \")[1].split('\\t')[1].replace('$','').replace(',','')\n",
     "    outputFile.write(quarter+\",\"+year+\",\"+rev)\n",
