linear regression data formatting and first pass at regression is done

--- a/Format Scripts/convertFuelData.ipynb
+++ b/Format Scripts/convertFuelData.ipynb
@@ -2,23 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "inputFile = open(\"data/raw_fueldata.csv\", \"r\")\n",
     "outputFile = open(\"fuelData.csv\", \"w\")\n",
     "quarters = [1, 1 ,1, 2, 2, 2, 3, 3, 3, 4, 4 ,4]\n",
     "# 11/27/09,75.95,\n",
-    "outputFile.write(\"date,day,month,year,quarter,fuel_value\\n\")\n",
+    "outputFile.write(\"date,yearmonth,qyear,quarter,fuel_value\\n\")\n",
     "for x in inputFile:\n",
     "    _date= x.split(\",\")[0]\n",
-    "    _month =_date.split(\"/\")[0]\n",
-    "    _day=_date.split(\"/\")[1]\n",
-    "    _year=\"20\"+_date.split(\"/\")[2]\n",
-    "    quarter = str(quarters[int(_month)-1])\n",
+    "    _yearmonth=\"20\"+_date.split(\"/\")[2] + \"-\"+ _date.split(\"/\")[0]\n",
+    "    quarter = str(quarters[int(_date.split(\"/\")[0])-1])\n",
     "    fuel_value = x.split(\",\")[1]\n",
-    "\n",
-    "    outputFile.write(_date+\",\"+_day+\",\"+_month+\",\"+_year+\",\"+quarter+\",\"+fuel_value)\n",
+    "    qyear= \"20\"+_date.split(\"/\")[2]\n",
+    "    outputFile.write(_date+\",\"+_yearmonth+\",\"+ qyear+\",\"+quarter+\",\"+fuel_value)\n",
     "outputFile.close()\n",
     "inputFile.close()"
    ],
@@ -32,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "\n"
