--- a/Format Scripts/convertRevData.ipynb
+++ b/Format Scripts/convertRevData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "pycharm": {
@@ -16,10 +16,10 @@
     "#Q3 2019 $5,639\n",
     "outputFile.write(\"quarter,year,rev\\n\")\n",
     "for x in inputFile:\n",
-    "    quarter= x.split(\" \")[0].replace('Q','')\n",
-    "    year = x.split(\" \")[1].split('\\t')[0]\n",
+    "    quarter= int(x.split(\" \")[0].replace('Q',''))\n",
+    "    year = int(x.split(\" \")[1].split('\\t')[0])\n",
     "    rev = x.split(\" \")[1].split('\\t')[1].replace('$','').replace(',','')\n",
-    "    outputFile.write(quarter+\",\"+year+\",\"+rev)\n",
+    "    outputFile.write(str(quarter)+\",\"+str(year)+\",\"+rev)\n",
     "outputFile.close()\n",
     "inputFile.close()"
    ]
