cleaned up the test/train data

--- a/Q Rev Analysis/convertQuarterDataToLinearFormat.ipynb
+++ b/Q Rev Analysis/convertQuarterDataToLinearFormat.ipynb
@@ -104,7 +104,7 @@
     "            quarterList[indexOfQuarter].append(float(passengers))\n",
     "            quarterList[indexOfQuarter].append(float(seats))        \n",
     "        \n",
-    "print(quarterList[0])\n",
+    "# print(quarterList[0])\n",
     "df = pd.DataFrame(quarterList) \n",
     "\n",
     "df.to_csv(\"new_full_quarterData.csv\", header=False,index=False)\n",
@@ -149,10 +149,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
