--- a/Q Rev Analysis/convertQuarterDataToLinearFormat.ipynb
+++ b/Q Rev Analysis/convertQuarterDataToLinearFormat.ipynb
@@ -2,7 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "passengerOrdered =\"full-data-passengerOrdered.csv\"\n",
+    "flightFlownOrdered =\"full-data-flightsFlownOrdered.csv\"\n",
+    "\n",
+    "fileToUse=passengerOrdered\n",
+    "MAX_SEGMENTS=5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "is_executing": false
@@ -21,7 +34,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "inputFile = open(\"full-quarter.csv\", \"r\")\n",
+    "inputFile = open(fileToUse, \"r\")\n",
     "# outputFile = open(\"new_full_quarterData.csv\", \"w\")\n",
     "\n",
     "yearList = [2010,2011,2012,2013,2014,2015,2016,2017,2018,2019]\n",
@@ -103,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +128,7 @@
     }
    ],
    "source": [
-    "inputFile = open(\"full-quarter.csv\", \"r\")\n",
+    "inputFile = open(fileToUse, \"r\")\n",
     "#firstLoopDefineHeaders & Standard Values\n",
     "for x in inputFile:\n",
     "    row_values= x.split(',')\n",
@@ -161,21 +174,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100\n",
-      "100\n"
+      "60\n",
+      "60\n"
      ]
     }
    ],
    "source": [
-    "MAX_SEGMENTS=10\n",
-    "inputFile = open(\"full-quarter.csv\", \"r\")\n",
+    "inputFile = open(fileToUse, \"r\")\n",
     "# outputFile = open(\"new_full_quarterData.csv\", \"w\")\n",
     "\n",
     "yearList = [2010,2011,2012,2013,2014,2015,2016,2017,2018,2019]\n",
@@ -249,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -261,7 +273,7 @@
     }
    ],
    "source": [
-    "inputFile = open(\"full-quarter.csv\", \"r\")\n",
+    "inputFile = open(fileToUse, \"r\")\n",
     "\n",
     "quarterCounter ={}\n",
     "for year in yearList:\n",
@@ -305,13 +317,6 @@
     "print(\"top Data Set done\")\n",
     "inputFile.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
