Fixing a few issues
I found a few minor issues and fixed them

--- a/Monthly Flight Stock and Fuel Data.ipynb
+++ b/Monthly Flight Stock and Fuel Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "<matplotlib.legend.Legend at 0x7efff1f486a0>"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -110,6 +110,9 @@
     "UA = stock_data[stock_data['carrier_id'] =='UA']\n",
     "WN = stock_data[stock_data['carrier_id'] =='WN']\n",
     "\n",
+    "# Add a list of colors\n",
+    "colors = ['#6290C3', '#8C9CAF', '#FFD966', '#F36866', '#67BF70', '#7EC3B3', '#9581CA']\n",
+    "\n",
     "# multiple line plot\n",
     "plt.plot('Date', 'High', data=AA, marker='', color=colors[2], linewidth=2, label='AA')\n",
     "plt.plot('Date', 'High', data=AS, marker='', color=colors[5], linewidth=2, label='AS')\n",
@@ -126,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -162,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,10 +282,17 @@
     "cl = ['WN', 'DL', 'AA', 'UA', 'B6', 'AS', 'NK']\n",
     "for f in glob.glob('flight_data/*'):\n",
     "    year_df_flight = pd.read_csv(f)\n",
-    "    year_df_flight['year'] = re.findall(\"[0-9]{4}\", f)[0]\n",
+    "    # Not needed, 'year' column already exists\n",
+    "    # year_df_flight['year'] = re.findall(\"[0-9]{4}\", f)[0]\n",
+    "    # Renaming columns to lowercase \n",
+    "    year_df_flight = year_df_flight.rename(str.lower, axis='columns')\n",
+    "    # Remove an empty column\n",
+    "    year_df_flight = year_df_flight.drop(year_df_flight.columns[20], axis=1)\n",
     "    year_df_flight = year_df_flight[year_df_flight['unique_carrier'].isin(cl)]\n",
     "    flight_data = flight_data.append(year_df_flight, ignore_index = True)\n",
-    "    \n",
+    "\n",
+    "# Add a 'yearmonth' column that is needed later\n",
+    "flight_data['yearmonth'] = flight_data['year'].astype(str) + '-' +flight_data['month'].map(\"{:02}\".format)\n",
     "file_name_flight = 'monthly_flight_data_7_airlines.csv'\n",
     "flight_data = flight_data.sort_values(by=['year', 'month', 'unique_carrier'])\n",
     "flight_data.to_csv(file_name_flight)"
@@ -290,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +505,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +525,7 @@
        "(1102071, 21)"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -558,7 +568,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
